Add payment oauth suuport with keycloak
